<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/levels"
                android:icon="@drawable/levels"
                android:title="@string/learning_title"/>
        <item
                android:id="@+id/user"
                android:icon="@drawable/profile"
                android:title="@string/profile_title"/>

        <item
                android:id="@+id/translator"
                android:icon="@drawable/translate"
                android:title="@string/TranslaterText"/>
        <item
                android:id="@+id/listen"
                android:icon="@drawable/listen"
                android:title="@string/listenText"/>
    </group>
</menu>