<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation2"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.myapplication.ui.dashboard.LearningFragment"
            android:label="@string/learning_title"
            tools:layout="@layout/fragment_learning"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.example.myapplication.ui.notifications.UserFragment"
            android:label="@string/profile_title"
            tools:layout="@layout/fragment_user"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.example.myapplication.ui.home.CoursesFragment"
            android:label="@string/settings_title"
            tools:layout="@layout/fragment_courses"/>
</navigation>