<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_user">

    <fragment
            android:id="@+id/navigation_courses"
            android:name="com.example.myapplication.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_coursrs"/>

    <fragment
            android:id="@+id/navigation_learning"
            android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_learning"/>

    <fragment
            android:id="@+id/navigation_user"
            android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_user"/>
</navigation>