<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.levels.Levels">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/scrollView2">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:fillViewport="true" android:gravity="center">
            <TextView
                    android:text="@string/levelsText"
                    android:layout_width="match_parent"
                    android:layout_height="59dp" android:id="@+id/level1_name2"
                    android:fontFamily="casual" android:textSize="20sp"
                    android:textColor="@color/black" android:textAlignment="center" android:textStyle="bold"
            />
            <TextView
                    android:text="I"
                    android:layout_width="400px"
                    android:layout_height="wrap_content" android:id="@+id/levelBt1" android:textAlignment="center"
                    android:textColor="#000000" android:textSize="80sp" android:fontFamily="serif"
                    android:singleLine="true" android:outlineProvider="paddedBounds"/>
            <TextView
                    android:text="@string/LevelName_1"
                    android:layout_width="match_parent"
                    android:layout_height="59dp" android:id="@+id/level1_name"
                    android:fontFamily="casual" android:textSize="20sp"
                    android:textColor="@color/black" android:textAlignment="center" android:textStyle="bold"
            />
            <TextView
                    android:text="II"
                    android:layout_width="400px"
                    android:layout_height="wrap_content" android:id="@+id/levelBt2" android:textAlignment="center"
                    android:textColor="#000000" android:textSize="80sp" android:fontFamily="serif"
                    android:singleLine="false" android:nestedScrollingEnabled="false"/>
            <TextView
                    android:text="@string/LevelName_2"
                    android:layout_width="match_parent"
                    android:layout_height="66dp" android:id="@+id/level2_name"
                    android:fontFamily="casual" android:textSize="20sp"
                    android:textColor="@color/black" android:textAlignment="center" android:textStyle="bold"
            />
            <TextView
                    android:text="III"
                    android:layout_width="400px"
                    android:layout_height="wrap_content" android:id="@+id/levelBt3" android:textAlignment="center"
                    android:textColor="#000000" android:textSize="80sp" android:fontFamily="serif"
                    android:singleLine="true"/>
            <TextView
                    android:text="@string/LevelName_3"
                    android:layout_width="match_parent"
                    android:layout_height="77dp" android:id="@+id/level3_name"
                    android:fontFamily="casual" android:textSize="20sp"
                    android:textColor="@color/black" android:textAlignment="center" android:textStyle="bold"
            />
            <TextView
                    android:text="IV"
                    android:layout_width="400px"
                    android:layout_height="wrap_content" android:id="@+id/levelBt4" android:textAlignment="center"
                    android:textColor="#000000" android:textSize="80sp" android:fontFamily="serif"
                    android:singleLine="true"/>
            <TextView
                    android:text="@string/LevelName_4"
                    android:layout_width="match_parent"
                    android:layout_height="77dp" android:id="@+id/level4_name"
                    android:fontFamily="casual" android:textSize="20sp"
                    android:textColor="@color/black" android:textAlignment="center" android:textStyle="bold"
            />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>