<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".SignIn">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/AuthLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintBottom_toTopOf="@+id/authUserBt" android:layout_marginBottom="20dp"/>
        <Button
                android:text="@string/AuthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/authUserBt"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="100dp"/>
        <EditText
                android:layout_width="330dp"
                android:layout_height="75dp"
                android:id="@+id/authPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="phone"
                android:ems="10"
                android:fontFamily="serif"
                android:textSize="20sp" app:layout_constraintTop_toBottomOf="@+id/authName_text3"
                android:layout_marginTop="10dp"/>
        <TextView
                android:text="@string/AuthPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/authName_text3"
                android:fontFamily="serif"
                android:textSize="24sp" android:textColor="#000000" android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/authPhone"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>