<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.UserFragment">

    <Button
            android:text="@string/SignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/SignOutBt"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"

            app:backgroundTint="#9E2929" app:layout_constraintTop_toBottomOf="@+id/progressBar4"
            android:layout_marginTop="50dp"/>
    <ImageView
            android:layout_width="170dp"
            android:layout_height="200dp" tools:src="@tools:sample/avatars" android:id="@+id/avatarUser"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" app:srcCompat="@drawable/tip"
            android:scaleType="centerInside" app:layout_constraintTop_toBottomOf="@+id/nameUser"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/changeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/avatarUser"
            app:layout_constraintStart_toStartOf="@+id/avatarUser" app:layout_constraintEnd_toEndOf="@+id/avatarUser"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameUser"
            android:textColor="#000000" android:textSize="20sp" android:fontFamily="serif" android:text="name"
            app:layout_constraintStart_toStartOf="@+id/avatarUser" app:layout_constraintEnd_toEndOf="@+id/avatarUser"
            app:layout_constraintTop_toBottomOf="@+id/inputChangeName" android:layout_marginTop="30dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameUser2"
            android:textColor="#000000" android:textSize="20sp" android:fontFamily="serif" android:text="Брат: 1"
            app:layout_constraintTop_toBottomOf="@+id/nameUser3"
            app:layout_constraintStart_toEndOf="@+id/avatarUser"
            android:layout_marginStart="4dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameUser3"
            android:textColor="#000000" android:textSize="20sp" android:fontFamily="serif" android:text="Ошибки:"
            app:layout_constraintTop_toBottomOf="@+id/points"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/nameUser2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/points"
            android:textColor="#D58400" android:textSize="24sp" android:fontFamily="serif" android:text="0"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name7"
            android:textColor="#000000" android:textSize="30sp" android:fontFamily="serif"
            android:text="@string/progress"
            app:layout_constraintStart_toStartOf="@+id/progressBar1" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/avatarUser" android:layout_marginStart="-1dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name1"
            android:textColor="#000000" android:textSize="20sp" android:fontFamily="serif"
            android:text="@string/LevelName_1"
            app:layout_constraintStart_toStartOf="@+id/progressBar1"
            app:layout_constraintTop_toBottomOf="@+id/name7" android:layout_marginTop="10dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="10dp"
            android:id="@+id/progressBar1"
            app:layout_constraintStart_toStartOf="@+id/avatarUser" app:layout_constraintTop_toBottomOf="@+id/name1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name2"
            android:textColor="#000000" android:textSize="20sp" android:fontFamily="serif"
            android:text="@string/LevelName_2"
            app:layout_constraintStart_toStartOf="@+id/progressBar1"
            app:layout_constraintTop_toBottomOf="@+id/progressBar1" android:layout_marginTop="15dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="10dp"
            android:id="@+id/progressBar2"
            app:layout_constraintStart_toStartOf="@+id/avatarUser" app:layout_constraintTop_toBottomOf="@+id/name2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name3"
            android:textColor="#000000" android:textSize="20sp" android:fontFamily="serif"
            android:text="@string/LevelName_3"
            app:layout_constraintStart_toStartOf="@+id/progressBar1"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2" android:layout_marginTop="15dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="10dp"
            android:id="@+id/progressBar3"
            app:layout_constraintStart_toStartOf="@+id/avatarUser" app:layout_constraintTop_toBottomOf="@+id/name3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name4"
            android:textColor="#000000" android:textSize="20sp" android:fontFamily="serif"
            android:text="@string/LevelName_4"
            app:layout_constraintStart_toStartOf="@+id/progressBar1"
            app:layout_constraintTop_toBottomOf="@+id/progressBar3" android:layout_marginTop="15dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="10dp"
            android:id="@+id/progressBar4"
            app:layout_constraintStart_toStartOf="@+id/avatarUser" app:layout_constraintTop_toBottomOf="@+id/name4"/>
    <ImageView
            android:src="@drawable/tip"
            android:layout_width="100dp"
            android:layout_height="100dp" android:id="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/avatarUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatarUser"/>
    <ImageView
            android:src="@drawable/ii"
            android:layout_width="50dp"
            android:layout_height="50dp" android:id="@+id/language"
            app:layout_constraintStart_toEndOf="@+id/nameUser"
            app:layout_constraintTop_toTopOf="@+id/nameUser"
            app:layout_constraintBottom_toBottomOf="@+id/nameUser" android:layout_marginStart="10dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/avatarUser"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/inputChangeName"
            android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/applay"
            android:layout_width="117dp"
            android:layout_height="48dp" android:id="@+id/applayBt"
            app:layout_constraintTop_toTopOf="@+id/inputChangeName"
            app:layout_constraintBottom_toBottomOf="@+id/inputChangeName"
            app:layout_constraintStart_toEndOf="@+id/inputChangeName" android:layout_marginStart="5dp"
            android:textSize="10sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>