<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LearningTests">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp" android:id="@+id/textView2"
            android:fontFamily="casual" android:textSize="20sp"
            android:textColor="@color/black" android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:background="@drawable/borders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6" app:layout_constraintStart_toStartOf="parent"
            android:singleLine="false"
            android:layout_marginTop="-15dp" android:layout_marginStart="70dp" android:layout_marginEnd="70dp"/>
    <TextView
            android:text="@string/courses_title"
            android:layout_width="match_parent"
            android:layout_height="32dp" android:id="@+id/level_name"
            android:fontFamily="casual" android:textSize="20sp"
            android:textColor="@color/black" android:textAlignment="center" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>
    <Button
            android:layout_width="119dp"
            android:layout_height="67dp" android:id="@+id/checkAnswer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.49" android:text="@string/BtCheckAnswerText"
            android:textSize="12sp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageTip" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.825" android:fontFamily="serif"
            android:textSize="24sp" android:textColor="#000000" android:textAlignment="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:fontFamily="serif"
            android:textSize="16sp" android:textColor="#80000000" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/imageTip"
            app:layout_constraintStart_toStartOf="@+id/imageTip"
            app:layout_constraintEnd_toEndOf="@+id/imageTip" android:text="@string/tipImage"/>
    <TextView
            android:text="@string/HintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            android:fontFamily="serif"
            android:textSize="24sp" android:textColor="#000000" android:textAlignment="center"
            android:layout_marginBottom="5dp"/>
    <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp" app:srcCompat="@android:drawable/ic_menu_help"
            android:id="@+id/imageTip"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.6"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="251dp"
            android:layout_height="78dp"
            android:id="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp" app:layout_constraintVertical_bias="0.82">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@null" android:fontFamily="serif" android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp" android:id="@+id/languageBt_LearningAct"
            android:scaleType="fitCenter"
            android:background="@null"
            android:soundEffectsEnabled="false"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="-5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>